--- a/src/main/resources/static/css/login/new_password.css
+++ b/src/main/resources/static/css/login/new_password.css
@@ -176,3 +176,12 @@ button, input[type=email], input[type=file], input[type=number], input[type=pass
         background-color: #3b7661;
     }
 }
+
+._2Zb2k {
+    border: 1px solid #f77;
+}
+
+._2Zb2k.focus-visible, html:not(.js-focus-visible) ._2Zb2k:focus {
+    outline: none;
+    box-shadow: 0 0 0 3px rgba(255,119,119,.3);
+}
