--- a/src/main/resources/templates/login/join.html
+++ b/src/main/resources/templates/login/join.html
@@ -15,7 +15,7 @@
     <section class="css-tbdbun e1y3odo25"><a href="/">
         <svg width="88" height="31" viewBox="0 0 88 31" preserveAspectRatio="xMidYMid meet">
             <g fill="none" fill-rule="evenodd">
-                <path fill="#35C5F0"
+                <path fill="#7aab9a"
                       d="M23.131 0H5.03C2.424 0 0 2.411 0 5v20c0 2.59 2.424 5 5.029 5h20.114c2.603 0 5.028-2.41 5.028-5V5c0-2.589-2.425-5-5.028-5H23.13z"></path>
                 <path fill="#FFF"
                       d="M22.114 15.615a1.99 1.99 0 0 1-1.996-1.984 1.99 1.99 0 0 1 1.996-1.985 1.99 1.99 0 0 1 1.996 1.985 1.99 1.99 0 0 1-1.996 1.984zm-1.488 5.213H9.123v-7.574l5.752-3.988 3.297 2.285a4.397 4.397 0 0 0-.52 2.08 4.44 4.44 0 0 0 2.974 4.183v3.014zm1.488-11.635c-.507 0-.995.086-1.449.24l-4.769-3.306a1.791 1.791 0 0 0-2.042 0l-7.14 4.95a1.771 1.771 0 0 0-.764 1.456v9.676c0 .98.8 1.775 1.785 1.775h14.28a1.78 1.78 0 0 0 1.785-1.775v-4.47a4.438 4.438 0 0 0 2.776-4.108c0-2.45-1.997-4.438-4.462-4.438z"></path>
