--- a/src/main/resources/templates/mypage/my-follower.html
+++ b/src/main/resources/templates/mypage/my-follower.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap"
           rel="stylesheet">
-    <link href="../../static/css/mypage/my-point.css" rel="stylesheet">
+    <link href="../../static/css/mypage/my-follower.css" rel="stylesheet">
 </head>
 <body>
 <div class="css-b3oum6">
@@ -44,7 +44,7 @@
                         <li class="page-navigation__item"><a class="" href="/users/20617180/collections" target="_self">스크랩북</a>
                         </li>
                         <li class="page-navigation__item"><a class="active" href="/users/20617180/praises"
-                                                             target="_self">휴지롤 관리</a></li>
+                                                             target="_self">팔로워 관리</a></li>
                     </ul>
                 </nav>
             </div>
@@ -141,58 +141,114 @@
                     <div class="css-1dm5gv7 e15wafbq0">
                         <div class="css-vb69r7 e1ivswjr2"></div>
                     </div>
-                    <div class="css-ow22sl e1v2ggz01">
-                        <div class="css-1h25ori e1t6i3i25">
-                            <div class="css-0 e1t6i3i24"><h2 class="css-o538wr e1t6i3i23">사용 가능한 휴지롤</h2>
-                                <p class="css-of8h0b e1t6i3i22">1,000 P</p></div>
-                            <div class="css-1yu4f1z e1t6i3i21"><p class="css-12fah4g e1t6i3i20">30일 이내 소멸 예정 휴지롤<b>0
-                                P</b></p></div>
-                        </div>
-                        <div class="css-a4hf5k e1rx7pum13">
-                            <div class="css-1066lcq e1rx7pum12"><h2 class="css-o538wr e1rx7pum11">휴지롤 내역</h2>
-                                <button class="css-1eaft1l e1rx7pum10"><span
-                                        class="icon _chevron_right_12 css-w9u1sc"></span></button>
-                            </div>
-                            <div class="css-18ewygj e1rx7pum9">
-                                <div class="css-oc7sge e1rx7pum8">
-                                    <div class="css-1kwo4sf e1rx7pum7">
-                                        <div class="css-3eylin e1rx7pum6">2023.05.15</div>
-                                        <div class="css-15jzb03 e1rx7pum5">
-                                            <div class="css-s5xdrg e1rx7pum4">
-                                                <div class="accumulate css-y3863i e1rx7pum3">적립</div>
-                                                <h2 class="css-1kzfo6n e1rx7pum2">첫사진 업로드</h2></div>
-                                            <ul class="css-82ta8s e1rx7pum1">
-                                                <li>첫 사진을 올리셨네요? 짝짝짝! 1000 휴지롤 적립되었습니다</li>
-                                                <li>유효기간: 2023.08.13까지</li>
-                                            </ul>
+                    <div class="css-1ltj86z e15wafbq0">
+                        <div class="css-10zpfwf eq9hiir2"><h1 class="css-16uohvy eq9hiir1">팔로잉</h1>
+                            <div class="virtualized-list"
+                                 style="padding-top: 0px; padding-bottom: 0px; transform: translateY(0px);">
+                                <div class="" style="">
+                                    <div class="css-1wwhxfz euanis37"><a class="css-1fqwelk euanis35"
+                                                                         href="/users/3220925">
+                                        <div class="css-qmr1ou euanis34"><img class="css-1cqverl euanis33"
+                                                                              src="https://image.ohou.se/i/bucketplace-v2-development/uploads/users/profile_images/165084712179551530.jpeg?gif=1&amp;w=40&amp;h=40&amp;c=c&amp;webp=1"
+                                                                              srcset="https://image.ohou.se/i/bucketplace-v2-development/uploads/users/profile_images/165084712179551530.jpeg?gif=1&amp;w=72&amp;h=72&amp;c=c&amp;webp=1 1.5x,https://image.ohou.se/i/bucketplace-v2-development/uploads/users/profile_images/165084712179551530.jpeg?gif=1&amp;w=80&amp;h=80&amp;c=c&amp;webp=1 2x,https://image.ohou.se/i/bucketplace-v2-development/uploads/users/profile_images/165084712179551530.jpeg?gif=1&amp;w=144&amp;h=144&amp;c=c&amp;webp=1 3x">
                                         </div>
+                                        <div class="css-1fxvqh3 euanis32">
+                                            <div class="css-19pzwhy euanis31">xoxosooz</div>
+                                            <div class="css-ei2twn euanis30">셀프로 오리고 붙이며 사는 집🏡</div>
+                                        </div>
+                                    </a>
+                                        <button class="_3Z6oR _1zLQC _1XHs9 css-19kmlp8 e43q1md0" type="button">팔로잉
+                                        </button>
                                     </div>
-                                    <div class="css-lgp5e9 e1rx7pum0">+ 1,000P</div>
+                                </div>
+                                <div class="" style="">
+                                    <div class="css-1wwhxfz euanis37"><a class="css-1fqwelk euanis35"
+                                                                         href="/users/3602461">
+                                        <div class="css-qmr1ou euanis34"><img class="css-1cqverl euanis33"
+                                                                              src="https://image.ohou.se/i/bucketplace-v2-development/uploads/users/profile_images/167056184658867118.jpeg?gif=1&amp;w=40&amp;h=40&amp;c=c&amp;webp=1"
+                                                                              srcset="https://image.ohou.se/i/bucketplace-v2-development/uploads/users/profile_images/167056184658867118.jpeg?gif=1&amp;w=72&amp;h=72&amp;c=c&amp;webp=1 1.5x,https://image.ohou.se/i/bucketplace-v2-development/uploads/users/profile_images/167056184658867118.jpeg?gif=1&amp;w=80&amp;h=80&amp;c=c&amp;webp=1 2x,https://image.ohou.se/i/bucketplace-v2-development/uploads/users/profile_images/167056184658867118.jpeg?gif=1&amp;w=144&amp;h=144&amp;c=c&amp;webp=1 3x">
+                                        </div>
+                                        <div class="css-1fxvqh3 euanis32">
+                                            <div class="css-19pzwhy euanis31">백솨니</div>
+                                            <div class="css-ei2twn euanis30">아파트에 색 취향을 입히다. 백솨니 신혼집.</div>
+                                        </div>
+                                    </a>
+                                        <button class="_3Z6oR _1zLQC _1XHs9 css-19kmlp8 e43q1md0" type="button">팔로잉
+                                        </button>
+                                    </div>
+                                </div>
+                                <div class="" style="">
+                                    <div class="css-1wwhxfz euanis37"><a class="css-1fqwelk euanis35"
+                                                                         href="/users/1391679">
+                                        <div class="css-qmr1ou euanis34"><img class="css-1cqverl euanis33"
+                                                                              src="https://image.ohou.se/i/bucketplace-v2-development/uploads/users/profile_images/163229439646854265.jpeg?gif=1&amp;w=40&amp;h=40&amp;c=c&amp;webp=1"
+                                                                              srcset="https://image.ohou.se/i/bucketplace-v2-development/uploads/users/profile_images/163229439646854265.jpeg?gif=1&amp;w=72&amp;h=72&amp;c=c&amp;webp=1 1.5x,https://image.ohou.se/i/bucketplace-v2-development/uploads/users/profile_images/163229439646854265.jpeg?gif=1&amp;w=80&amp;h=80&amp;c=c&amp;webp=1 2x,https://image.ohou.se/i/bucketplace-v2-development/uploads/users/profile_images/163229439646854265.jpeg?gif=1&amp;w=144&amp;h=144&amp;c=c&amp;webp=1 3x">
+                                        </div>
+                                        <div class="css-1fxvqh3 euanis32">
+                                            <div class="css-19pzwhy euanis31">아여리네</div>
+                                            <div class="css-ei2twn euanis30">감성을 좋아하는 아여리네집🏠</div>
+                                        </div>
+                                    </a>
+                                        <button class="_3Z6oR _1zLQC _1XHs9 css-19kmlp8 e43q1md0" type="button">팔로잉
+                                        </button>
+                                    </div>
+                                </div>
+                                <div class="" style="">
+                                    <div class="css-1wwhxfz euanis37"><a class="css-1fqwelk euanis35"
+                                                                         href="/users/3571966">
+                                        <div class="css-qmr1ou euanis34"><img class="css-1cqverl euanis33"
+                                                                              src="https://image.ohou.se/i/bucketplace-v2-development/uploads/users/profile_images/166961198876873319.jpeg?gif=1&amp;w=40&amp;h=40&amp;c=c&amp;webp=1"
+                                                                              srcset="https://image.ohou.se/i/bucketplace-v2-development/uploads/users/profile_images/166961198876873319.jpeg?gif=1&amp;w=72&amp;h=72&amp;c=c&amp;webp=1 1.5x,https://image.ohou.se/i/bucketplace-v2-development/uploads/users/profile_images/166961198876873319.jpeg?gif=1&amp;w=80&amp;h=80&amp;c=c&amp;webp=1 2x,https://image.ohou.se/i/bucketplace-v2-development/uploads/users/profile_images/166961198876873319.jpeg?gif=1&amp;w=144&amp;h=144&amp;c=c&amp;webp=1 3x">
+                                        </div>
+                                        <div class="css-1fxvqh3 euanis32">
+                                            <div class="css-19pzwhy euanis31">옥냥s2</div>
+                                            <div class="css-ei2twn euanis30">Instagram @rangdelier</div>
+                                        </div>
+                                    </a>
+                                        <button class="_3Z6oR _1zLQC _1XHs9 css-19kmlp8 e43q1md0" type="button">팔로잉
+                                        </button>
+                                    </div>
+                                </div>
+                                <div class="" style="">
+                                    <div class="css-1wwhxfz euanis37"><a class="css-1fqwelk euanis35"
+                                                                         href="/users/6131174">
+                                        <div class="css-qmr1ou euanis34"><img class="css-1cqverl euanis33"
+                                                                              src="https://image.ohou.se/i/bucketplace-v2-development/uploads/users/profile_images/164017098338356007.jpeg?gif=1&amp;w=40&amp;h=40&amp;c=c&amp;webp=1"
+                                                                              srcset="https://image.ohou.se/i/bucketplace-v2-development/uploads/users/profile_images/164017098338356007.jpeg?gif=1&amp;w=72&amp;h=72&amp;c=c&amp;webp=1 1.5x,https://image.ohou.se/i/bucketplace-v2-development/uploads/users/profile_images/164017098338356007.jpeg?gif=1&amp;w=80&amp;h=80&amp;c=c&amp;webp=1 2x,https://image.ohou.se/i/bucketplace-v2-development/uploads/users/profile_images/164017098338356007.jpeg?gif=1&amp;w=144&amp;h=144&amp;c=c&amp;webp=1 3x">
+                                        </div>
+                                        <div class="css-1fxvqh3 euanis32">
+                                            <div class="css-19pzwhy euanis31">이엘홈</div>
+                                            <div class="css-ei2twn euanis30">리모델링 전원주택, 멍돌이네 집.</div>
+                                        </div>
+                                    </a>
+                                        <button class="_3Z6oR _1zLQC _1XHs9 css-19kmlp8 e43q1md0" type="button">팔로잉
+                                        </button>
+                                    </div>
+                                </div>
+                                <div class="" style="">
+                                    <div class="css-1wwhxfz euanis37"><a class="css-1fqwelk euanis35"
+                                                                         href="/users/2181878">
+                                        <div class="css-qmr1ou euanis34"><img class="css-1cqverl euanis33"
+                                                                              src="https://image.ohou.se/i/bucketplace-v2-development/uploads/users/profile_images/167102274422721706.jpeg?gif=1&amp;w=40&amp;h=40&amp;c=c&amp;webp=1"
+                                                                              srcset="https://image.ohou.se/i/bucketplace-v2-development/uploads/users/profile_images/167102274422721706.jpeg?gif=1&amp;w=72&amp;h=72&amp;c=c&amp;webp=1 1.5x,https://image.ohou.se/i/bucketplace-v2-development/uploads/users/profile_images/167102274422721706.jpeg?gif=1&amp;w=80&amp;h=80&amp;c=c&amp;webp=1 2x,https://image.ohou.se/i/bucketplace-v2-development/uploads/users/profile_images/167102274422721706.jpeg?gif=1&amp;w=144&amp;h=144&amp;c=c&amp;webp=1 3x">
+                                        </div>
+                                        <div class="css-1fxvqh3 euanis32">
+                                            <div class="css-19pzwhy euanis31">플로라미</div>
+                                            <div class="css-ei2twn euanis30">세식구가 함께하는 따뜻한 집과 일상기록🧡</div>
+                                        </div>
+                                    </a>
+                                        <button class="_3Z6oR _1zLQC _1XHs9 css-19kmlp8 e43q1md0" type="button">팔로잉
+                                        </button>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="css-e1gl82 e1v2ggz00">
-                            <ul class="_2BEHX">
-                                <li class="_1B8WI"><a class="_2XI47 _1gwhd" href="/user_shopping_pages/mileages?page=1">
-                                    <svg width="1em" height="1em" viewBox="0 0 24 24">
-                                        <path fill="currentColor"
-                                              d="M6 19.692L8.25 22 18 12 8.25 2 6 4.308 13.5 12z"></path>
-                                    </svg>
-                                </a></li>
-                                <li><a class="_3b4ci R16_p" href="/user_shopping_pages/mileages?page=1">1</a></li>
-                                <li class="_1B8WI"><a class="_2XI47 _3I7ex" href="/user_shopping_pages/mileages?page=1">
-                                    <svg width="1em" height="1em" viewBox="0 0 24 24">
-                                        <path fill="currentColor"
-                                              d="M6 19.692L8.25 22 18 12 8.25 2 6 4.308 13.5 12z"></path>
-                                    </svg>
-                                </a></li>
-                            </ul>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+</div>
 </div>
 </body>
 </html>
